// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      31,
      124,
      114,
      81,
      10,
      99,
      30,
      64,
      152,
      183,
      195,
      67,
      107,
      210,
      203,
      120,
      42,
      42,
      218,
      249,
      144,
      120,
      191,
      88,
      68,
      109,
      135,
      2,
      229,
      175,
      223,
      31,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 587703305517770651443581700965463419402329990676290745771558099600379869110n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 14183899854343735726273072423861389595545367822703803926156437266914765787587n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    15,
    163,
    36,
    163,
    221,
    246,
    197,
    8,
    204,
    213,
    128,
    203,
    35,
    216,
    154,
    194,
    176,
    48,
    29,
    205,
    219,
    167,
    225,
    30,
    138,
    89,
    235,
    60,
    174,
    63,
    167,
    223,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
{
  "data": [
    15,
    244,
    158,
    127,
    86,
    121,
    44,
    96,
    114,
    96,
    24,
    11,
    193,
    100,
    232,
    229,
    104,
    98,
    171,
    110,
    107,
    141,
    140,
    61,
    66,
    220,
    181,
    110,
    209,
    66,
    181,
    168,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 12125610727223956800302813404878728417440563546649886466255076581695454329514n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 8955236039943388976259759391839453100491522182218493180262383122788045296302n,
}
`;
